<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_register_ad"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.rubatto.staralba.RegisterAdActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:background="@drawable/register_background"
                    android:orientation="vertical"
                    android:paddingTop="45dp">

                    <!--<ImageView
                        android:id="@+id/register_backbutton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="20dp"
                        android:layout_marginLeft="20dp"
                        android:layout_marginTop="20dp"
                        android:background="@drawable/left_arrow_white" />-->

                    <EditText
                        android:id="@+id/register_business_name_ed"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp"
                        android:background="@null"
                        android:hint="@string/register_ad_hint_business_name"
                        android:textAlignment="center"
                        android:textColor="@color/orange"
                        android:textColorHint="@color/orange"
                        android:textSize="22dp" />

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:padding="10dp">

                        <ImageView
                            android:id="@+id/register_profile_img"
                            android:layout_width="100dp"
                            android:layout_height="100dp"
                            android:layout_marginRight="15dp"
                            android:background="@drawable/round_border"
                            android:padding="30dp"
                            android:src="@android:drawable/ic_menu_camera" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="100dp"
                            android:layout_toEndOf="@+id/register_profile_img"
                            android:layout_toRightOf="@+id/register_profile_img"
                            android:orientation="vertical">

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="0dp"
                                android:layout_weight="1"
                                android:gravity="bottom">

                                <EditText
                                    android:id="@+id/register_title_ed"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:background="@null"
                                    android:hint="@string/register_ad_hint_title"
                                    android:maxLength="15"
                                    android:textColor="@color/white"
                                    android:textColorHint="@color/white"
                                    android:textSize="14dp" />
                            </LinearLayout>

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="0dp"
                                android:layout_weight="1"
                                android:gravity="center_vertical">

                                <TextView
                                    android:id="@+id/register_title_underline"
                                    android:layout_width="match_parent"
                                    android:layout_height="1dp"
                                    android:background="@color/white" />
                            </LinearLayout>

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="0dp"
                                android:layout_weight="1"
                                android:gravity="center_vertical"
                                android:orientation="horizontal">

                                <ImageView
                                    android:layout_width="16dp"
                                    android:layout_height="16dp"
                                    android:layout_marginRight="10dp"
                                    android:src="@drawable/register_name" />

                                <EditText
                                    android:id="@+id/register_name_edit"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:background="@null"
                                    android:hint="@string/register_ad_hint_name"
                                    android:maxLength="15"
                                    android:textColor="@color/white"
                                    android:textColorHint="@color/white"
                                    android:textSize="14dp" />
                            </LinearLayout>

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="0dp"
                                android:layout_weight="1"
                                android:gravity="center_vertical"
                                android:orientation="horizontal">

                                <ImageView
                                    android:layout_width="16dp"
                                    android:layout_height="16dp"
                                    android:layout_marginRight="10dp"
                                    android:src="@drawable/register_phone" />

                                <EditText
                                    android:id="@+id/register_phone_edit"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:background="@null"
                                    android:hint="@string/register_ad_hint_phone"
                                    android:inputType="number"
                                    android:maxLength="12"
                                    android:textColor="@color/white"
                                    android:textColorHint="@color/white"
                                    android:textSize="14dp" />
                            </LinearLayout>
                        </LinearLayout>
                    </RelativeLayout>
                </LinearLayout>

                <android.support.design.widget.AppBarLayout
                    android:id="@+id/appBarLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:theme="@style/AppTheme.AppBarOverlay"
                    app:elevation="0dp">

                    <android.support.v7.widget.Toolbar
                        android:id="@+id/register_toolbar"
                        android:layout_width="match_parent"
                        android:layout_height="45dp"
                        app:popupTheme="@style/AppTheme.PopupOverlay" />
                </android.support.design.widget.AppBarLayout>
            </FrameLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_weight="1"
                        android:background="@drawable/round_stroke_border"
                        android:orientation="horizontal"
                        android:padding="10dp">

                        <ImageView
                            android:layout_width="16dp"
                            android:layout_height="16dp"
                            android:layout_marginRight="10dp"
                            android:src="@drawable/register_category" />

                        <TextView
                            android:id="@+id/register_category_tv"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/register_ad_hint_category"
                            android:textColor="@color/gray" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/register_pay_layout"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_weight="1"
                        android:background="@drawable/round_stroke_border"
                        android:orientation="horizontal"
                        android:padding="10dp">

                        <ImageView
                            android:layout_width="16dp"
                            android:layout_height="16dp"
                            android:layout_marginRight="10dp"
                            android:src="@drawable/register_pay_se" />

                        <TextView
                            android:id="@+id/register_pay_se_tv"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginRight="10dp"
                            android:text="급여를"
                            android:textColor="@color/gray" />

                        <TextView
                            android:id="@+id/register_pay_tv"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="선택하세요"
                            android:textColor="@color/gray" />
                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/register_address_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:background="@drawable/round_stroke_border"
                    android:orientation="horizontal"
                    android:padding="10dp">

                    <ImageView
                        android:layout_width="16dp"
                        android:layout_height="16dp"
                        android:layout_marginRight="10dp"
                        android:src="@drawable/register_address" />

                    <TextView
                        android:id="@+id/register_address_tv"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/register_ad_hint_address"
                        android:textColor="@color/gray" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/register_theme_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:background="@drawable/round_stroke_border"
                    android:orientation="horizontal"
                    android:padding="10dp">

                    <ImageView
                        android:layout_width="16dp"
                        android:layout_height="16dp"
                        android:layout_marginRight="10dp"
                        android:src="@drawable/register_theme" />

                    <TextView
                        android:id="@+id/register_theme_tv"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/register_ad_hint_theme"
                        android:textColor="@color/gray" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/register_guarantee_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:background="@drawable/round_stroke_border"
                    android:orientation="horizontal"
                    android:padding="10dp">

                    <ImageView
                        android:layout_width="16dp"
                        android:layout_height="16dp"
                        android:layout_marginRight="10dp"
                        android:src="@drawable/register_guarantee" />

                    <TextView
                        android:id="@+id/register_gurantee_tv"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/register_ad_hint_guarantee"
                        android:textColor="@color/gray" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/round_stroke_border">

                    <EditText
                        android:id="@+id/register_introduce_ed"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:background="@null"
                        android:hint="@string/register_ad_hint_introduce"
                        android:padding="5dp"
                        android:textAlignment="center"
                        android:textSize="14dp" />
                </LinearLayout>
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/colorPrimary" />

            <Button
                android:id="@+id/register_bt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_margin="10dp"
                android:background="@color/colorPrimary"
                android:text="등록완료"
                android:textColor="@color/white"
                android:textSize="16dp" />
        </LinearLayout>
    </ScrollView>
</RelativeLayout>
